GNOME Bugzilla – Bug 124244
ungrouping rows with plus-sign doesn't always work
Last modified: 2004-12-22 21:47:04 UTC
I put a file in my web: http://www.avkb.ee/test.xls. If I open this file with Gnumeric, I can expand the grouped rows first time only by clicking the grouping level number 2. Plus-sign doesn't work. After I have once expanded and collapsed grouped rows, plus-sign will work also. Expanding grouped columns works as needed.
Created attachment 20606 [details] sample excel file
I can replicate this. This logic has been damn tricky. Its probably related to the direction of the plus.
phew. The logic was fine. This was a simple xls import error. We were only setting the collapse state on cols/rows that were at level > 0.