http://bugzilla.gnome.org/show_bug.cgi?id=124244 [unable to open group]

2003-10-18  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=124244	[unable to open group]
	* ms-excel-read.c (excel_read_COLINFO) : set collapsed even if level == 0
	(excel_read_ROW) : ditto.